--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -1,6 +1,6 @@
 <!-- Bootstrap core CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
 
 
 <!-- Custom styles for this template -->
@@ -20,201 +20,146 @@
 
     <div class="container">
         <div class="row">
-                <div class="col-md-6 g-ml-50 text-center">
-            
-                        <h3 class="center g-mb-25 text-info">
-                            Person Info
-                        </h3>
-                        <div class="row  g-py-3 ">
-                            <div class=" align-middle   text-primary text-size-16   "> First Name: </div>
-                            
-                            <span class="offset-md-1" >
-                                    <%-person[0]%>
-                                </span>
-                        </div>
-                           
-                            
-                        
-                        <div class="row   g-py-3">
-                            <div class=" align-middle text-primary text-size-16  "> Last Name: </div>
-                            
-                                <span class="offset-md-1">
-                                    <%-person[1]%>
-                                </span>
-                             
-                        </div>
-            
-            
-                        <div class="row    g-py-3">
-                            <div class=" align-middle text-primary text-size-16  "> Birthday: </div>
-                        
-                                <span class="offset-md-1">
-                                    <%-person[2]%>
-                                </span>
-                            
-                        </div>
-            
-                        <div class="row  g-py-3">
-                            <div class=" align-middle text-primary text-size-16  "> Birthplace: </div>
-                           
-                                <span class="offset-md-1">
-                                    <%-person[3]%>
-                                </span>
-                            
-                        </div>
-            
-                        <div class="row  g-py-3">
-                            <div class=" align-middle text-primary text-size-16 "> Sex: </div>
-                            
-                                <span class="offset-md-2">
-                                    <%-person[5]%>
-                                </span>
-                            
-                        </div>
-            
-                        <hr>
-                        <h3 class="center g-mb-25 text-info">
-                            Education
-                        </h3>
-                        <div class="row g-py-3 ">
-                            <div class=" align-middle text-primary text-size-16  "> College</div>
-                             
-                                <span class="offset-md-1">
-                                    Manhattan College
-                                </span>
-                            
-                        </div>
-                        <div class="row   g-py-3">
-                            <div class=" align-middle text-primary text-size-16  "> Bachelor Type </div>
-                           
-                                <span class="offset-md-1">
-                                    Bachelor of Science
-                                </span>
-                           
-                        </div>
-            
-            
-                        <div class="row   g-py-3">
-                            <div class=" align-middle text-primary text-size-16  "> Major </div>
-                            
-                                <span class="offset-md-1">
-                                    Computer Science
-                                </span>
-                           
-                        </div>
-            
-                        <div class="row  g-py-3">
-                            <div class=" align-middle text-primary text-size-16  "> GPA</div>
-                         
-                                <span class="offset-md-1">
-                                    3.8
-                                </span>
-                             
-                        </div>
-            
-                        <div class="row g-py-3">
-                            <div class=" align-middle text-primary text-size-16  "> Has Graduated</div>
-                           
-                                <span class="offset-md-1">
-                                    False
-                                </span>
-                             
-                        </div>
-            
-                        <div class="row   g-py-3">
-                            <div class=" align-middle text-primary text-size-16  "> Currently in School</div>
-                          
-                                <span class="offset-md-1">
-                                    True
-                                </span>
-                           
-                        </div>
-            
-            
-                        <hr>
-            
-                        <h3 class="center g-mb-25 text-info">
-                            Family Info
-                        </h3>
-                        <div class="row g-py-3 ">
-                            <div class=" align-middle text-primary text-size-16  "> First Parent</div>
-                            
-                                <span class="offset-md-1">
-                                    <%-family[0]%>
-                                </span>
-                           
-                        </div>
-                        <div class="row g-py-3">
-                            <div class=" align-middle text-primary text-size-16  "> Second Parent </div>
-                            
-                                <span class="offset-md-1">
-                                    <%-family[1]%>
-                                </span>
-                           
-                        </div>
-            
-                        <hr>
-            
-                        <h3 class="center g-mb-25 text-info">
-                            Address
-                        </h3>
-                        <div class="row  g-py-3 ">
-                            <div class=" align-middle text-primary text-size-16  "> Country</div>
-                            
-                                <span class="offset-md-1">
-                                    <%-address[0]%>
-                                </span>
-                          
-                        </div>
-                        <div class="row   g-py-3">
-                            <div class=" align-middle text-primary text-size-16  "> City </div>
-                            
-                                <span class="offset-md-1">
-                                    <%-address[1]%>
-                                </span>
-                            
-                        </div>
-            
-                        <div class="row   g-py-3">
-                            <div class=" align-middle text-primary text-size-16  "> Street </div>
-                           
-                                <span class="offset-md-1">
-                                    <%-address[2]%>
-                                </span>
-                      
-                        </div>
-            
-                        <div class="row   g-py-3">
-                            <div class=" align-middle text-primary text-size-16  "> Apt </div>
-                            
-                                <span class="offset-md-1">
-                                    <%-address[3]%>
-                                </span>
-                            
-                        </div>
-            
-                        <div class="row   g-py-3">
-                            <div class=" align-middle text-primary text-size-16  "> Zip COde </div>
-                           
-                                <span class="offset-md-1">
-                                    <%-address[4]%>
-                                </span>
-                        
-                        </div>
-            
-            
-            
-            
-            
-            
-                    </div>
-            
-                    <div class="col-md-6 g-ml-50 text-center" style="margin-top:100px">
-                            <img  src="../assets/images/logo1.png " width="500px" height="250px">         
+            <div class="col-md-6 g-ml-50 text-center">
+
+                <h3 class="center g-mb-25 text-info">
+                    Person Info
+                </h3>
+                <div class="row">
+                    <div class="col-md-6  g-py-3 ">
+                        <div class=" align-middle   text-primary text-size-16   "> First Name: </div>
+                        <div class=" align-middle text-primary text-size-16  "> Last Name: </div>
+                        <div class=" align-middle text-primary text-size-16  "> Birthday: </div>
+                        <div class=" align-middle text-primary text-size-16  "> Birthplace: </div>
+                        <div class=" align-middle text-primary text-size-16 "> Sex: </div>
+
                     </div>
 
+                    <div class="col-md-6  g-py-3 ">
+                        <div class=" align-middle   text-size-16   ">
+                            <%-person[0]%>
+                        </div>
+                        <div class=" align-middle   text-size-16  ">
+                            <%-person[1]%>
+                        </div>
+                        <div class=" align-middle   text-size-16  ">
+                            <%-person[2]%>
+                        </div>
+                        <div class=" align-middle   text-size-16  ">
+                            <%-person[3]%>
+                        </div>
+                        <div class=" align-middle   text-size-16 ">
+                            <%-person[4]%>
+                        </div>
+
+                    </div>
+
+                </div>
+                <hr>
+                <h3 class="center g-mb-25 text-info">
+                    Education
+                </h3>
+                <div class="row">
+                    <div class="col-md-6 g-py-3 ">
+                        <div class=" align-middle text-secondary text-size-16  "> College</div>
+                        <div class=" align-middle text-secondary text-size-16  "> Bachelor Type </div>
+                        <div class=" align-middle text-secondary text-size-16  "> Major </div>
+                        <div class=" align-middle text-secondary text-size-16  "> GPA</div>
+                        <div class=" align-middle text-secondary text-size-16  "> Has Graduated</div>
+                        <div class=" align-middle text-secondary text-size-16  "> Currently in School</div>
+
+                    </div>
+
+
+                    <div class="col-md-6  g-py-3 ">
+                        <div class=" align-middle   text-size-16   ">
+                            <%-education[0]%>
+                        </div>
+                        <div class=" align-middle   text-size-16  ">
+                            <%-education[1]%>
+                        </div>
+                        <div class=" align-middle   text-size-16  ">
+                            <%-education[2]%>
+                        </div>
+                        <div class=" align-middle   text-size-16  ">
+                            <%-education[3]%>
+                        </div>
+                        <div class=" align-middle   text-size-16 ">
+                            <%-education[4]%>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <hr>
+
+                <h3 class="center g-mb-25 text-info">
+                    Family Info
+                </h3>
+
+                <div class="row g-py-3">
+
+                    <div class="col-md-6 g-py-3 ">
+                        <div class=" align-middle text-primary text-size-16  "> First Parent</div>
+                        <div class=" align-middle text-primary text-size-16  "> Second Parent </div>
+
+                    </div>
+                    <div class=" col-md-6 g-py-3 ">
+                        <div class=" align-middle  text-size-16  ">
+                            <%-family[0]%>
+                        </div>
+                        <div class=" align-middle  text-size-16  ">
+                            <%-family[1]%>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <h3 class="center g-mb-25 text-info">
+                    Address
+                </h3>
+                <div class="row">
+                    <div class="col-md-6  g-py-3 ">
+                        <div class=" align-middle text-secondary text-size-16  "> Country</div>
+                        <div class=" align-middle text-secondary text-size-16  "> City </div>
+                        <div class=" align-middle text-secondary text-size-16  "> Street </div>
+                        <div class=" align-middle text-secondary text-size-16  "> Apt </div>
+                        <div class=" align-middle text-secondary text-size-16  "> Zip Code </div>
+                    </div>
+
+                    <div class="col-md-6  g-py-3 ">
+                        <div class=" align-middle   text-size-16   ">
+                            <%-address[0]%>
+                        </div>
+                        <div class=" align-middle   text-size-16  ">
+                            <%-address[1]%>
+                        </div>
+                        <div class=" align-middle   text-size-16  ">
+                            <%-address[2]%>
+                        </div>
+                        <div class=" align-middle   text-size-16  ">
+                            <%-address[3]%>
+                        </div>
+                        <div class=" align-middle   text-size-16 ">
+                            <%-address[4]%>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 g-ml-50 text-center" style="margin-top:100px">
+                <img src="../assets/images/logo1.png " width="500px" height="250px">
+                
+                <div style="margin-top:20px">
+                    <a href="/" class="btn btn-primary">Search another person </a>
+                </div>
+            
+                
+
+            </div>
+
         </div>
-     
+
     </div>
 
 </body>
